re PR libfortran/29627 ([4.1 only] partial unformatted reads shouldn't succeed)

2006-11-03  Thomas Koenig  <Thomas.Koenig@online.de>

	PR libfortran/29627
	Backport from trunk
	* libgfortran.h: Add ERROR_SHORT_RECORD
	* runtime/error.c (translate_error): Add case
	for ERROR_SHORT_RECORD.
	* io/transfer.c (read_block_direct):  Separate codepaths
	for stream and record unformatted I/O.  Remove unneeded
	tests for standard input, padding and formatted I/O.
	If the record is short, read in as much data as possible,
	then raise the error.

2006-11-03  Thomas Koenig  <Thomas.Koenig@online.de>

	PR libfortran/29627
	Backport from trunk
	* gfortran.dg/unf_short_record_1.f90:  New test.

From-SVN: r118453